[project]
name = "excel-to-html-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Timothee Corlay",email = "timothee.corlay@grenoble-inp.fr"}
]
packages = [
    { include = "excel_to_html_app" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
